[FIX] Validation 추가, 코드 정리